syntax = "proto3";
package tic_tac_toe;

message Player {
  int32 id = 1;
  string name = 2;
  string symbol = 3;
  bool isTurn = 4;
  int32 score = 5;
}

enum GameState {
  IN_PROGRESS = 0;
  PLAYER_1_WIN = 1;
  PLAYER_2_WIN = 2;
  DRAW = 3;
}

message EndGame {
    string  winnerId = 1;
}

message Action {
  Player player = 1;
  string roomId = 2;
  int32 to = 3;
  string symbol = 4;
}

message sendDataAction {
 repeated Player players = 1;
 int32 to = 3;
 string symbol = 4;
}
message sendWinStatus {
  int32 type = 1;
  string data = 2;
}
message startGame {
  string roomId = 1;
  int32 ownerId = 2;
  repeated Player players = 3;
  repeated string board = 4 ;
  int32 gameType = 5;
}
message endGame {
  string roomId = 1;
  Player player =2;
}


